Container-Virtulization-Technology/kubernetes/getting-started/simple-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-echo
  labels:
    app: echo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
  template: # template以下はPodリソースにおける定義と同じ
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: nginx
          image: gihyodocker/nginx:latest
          ports:
            - containerPort: 80
        - name: echo
          image: gihyodocker/echo:latest
          ports:
          - containerPort: 8080
