Container-Virtulization-Technology/kubernetes/getting-started/simple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      set $agentflag 0;

      if ( $http_user_agent ~* "(Mobile)" ) {
          set $agentflag 1;
      }

      if ( $agentflag = 1 ) {
          return 301 http://gihyo.jp/;
      }
spec:
  rules:
  - host: ch05.gihyo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
